examples/test/testpolicy14292.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14292
  namespace: namespace66
spec:
  podSelector:
    matchLabels:
      key2: value15
      key7: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value41
      podSelector:
        matchLabels:
          key40: value0
          key8: value15
